Make sure separator extends to bottom in box-style comments
I don't like the use of the negative margin hack here, but it seems the
most straightforward way to get the border to always extend to the
bottom.

Basically, we draw the border on the right edge of the `cite` element,
and on the left edge of the `blockquote` element. The negative margin
makes the two borders overlap, which in turn means that the border will
extend to the bottom regardless of which element is taller.

Along the way dropped some unnecessary `px` units from zero margins.

--- a/app/assets/stylesheets/_comment-boxes.sass
+++ b/app/assets/stylesheets/_comment-boxes.sass
@@ -20,7 +20,7 @@ ol#comments
     white-space: normal
     background-image: none
     border-left: 1px solid $border_color
-    margin: 0px
+    margin: 0
     vertical-align: top
     display: inline-block
     width: 75%
@@ -31,6 +31,7 @@ ol#comments
     > p, li
       color: #666
   cite
+    border-right: 1px solid $border_color
     float: left
     white-space: normal
     display: inline-block
@@ -38,7 +39,7 @@ ol#comments
     font-style: normal
     width: 15%
     background-image: none
-    margin: 0px
+    margin: 0 -1px 0 0
     padding: 10px
 
 ol#comments.boxed
